--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 node_modules
 Design
-wordpress/wp-admin
-wordpress/wp-includes
-wordpress/wp-content/plugins
+wordpress/*
+!wordpress/wp-content/
+wordpress/wp-content/*
+!wordpress/wp-content/themes/
+wordpress/wp-content/themes/*
+!wordpress/wp-content/themes/espaceP/
